--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -41,7 +41,7 @@
         android:textSize="@dimen/title_text_size"
         android:visibility="gone" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/submit_exchange_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -49,7 +49,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="24dp"
         android:text="@string/submit_exchange_button_title"
-        android:visibility="gone" />
+        android:visibility="gone"
+        app:cornerRadius="18dp" />
 
     <ProgressBar
         android:id="@+id/page_loading_progress_bar"
