--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -14,7 +14,8 @@
         android:layout_margin="12dp"
         android:text="@string/my_balance_title"
         android:textSize="@dimen/title_text_size"
-        android:visibility="gone" />
+        android:visibility="gone"
+        tools:visibility="visible" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/balances_recycler_view"
@@ -28,7 +29,8 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:reverseLayout="false"
         tools:itemCount="10"
-        tools:listitem="@layout/balance_item" />
+        tools:listitem="@layout/balance_item"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/exchange_title"
@@ -39,7 +41,8 @@
         android:layout_margin="12dp"
         android:text="@string/exchange_title"
         android:textSize="@dimen/title_text_size"
-        android:visibility="gone" />
+        android:visibility="gone"
+        tools:visibility="visible" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/submit_exchange_button"
@@ -50,13 +53,15 @@
         android:layout_marginBottom="24dp"
         android:text="@string/submit_exchange_button_title"
         android:visibility="gone"
-        app:cornerRadius="18dp" />
+        app:cornerRadius="18dp"
+        tools:visibility="visible" />
 
     <ProgressBar
         android:id="@+id/page_loading_progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true" />
+        android:layout_centerInParent="true"
+        tools:visibility="gone" />
 
     <TextView
         android:id="@+id/unrecoverable_error_happened_title"
