--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="sell_currency_icon_tint">#D96156</color>
+    <color name="buy_currency_icon_tint">#4F9A6F</color>
 </resources>
