--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -13,6 +13,7 @@
         android:layout_alignParentTop="true"
         android:layout_margin="12dp"
         android:text="@string/my_balance_title"
+        android:textAllCaps="true"
         android:textSize="@dimen/title_text_size"
         android:visibility="gone"
         tools:visibility="visible" />
@@ -40,6 +41,7 @@
         android:layout_alignParentStart="true"
         android:layout_margin="12dp"
         android:text="@string/exchange_title"
+        android:textAllCaps="true"
         android:textSize="@dimen/title_text_size"
         android:visibility="gone"
         tools:visibility="visible" />
