--- a/app/src/main/res/layout/balance_item.xml
+++ b/app/src/main/res/layout/balance_item.xml
@@ -7,6 +7,7 @@
     android:layout_gravity="center_vertical"
     android:layout_marginStart="10dp"
     android:layout_marginEnd="10dp"
+    android:textStyle="bold"
     android:textSize="24sp"
     tools:text="1000.0 EUR">
 
