--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="sell_currency_icon_tint">#D96156</color>
     <color name="buy_currency_icon_tint">#4F9A6F</color>
+    <color name="divider_color">#F0F1F3</color>
 </resources>
