--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -54,7 +54,7 @@
         android:src="@drawable/ic_sell_currency" />
 
     <TextView
-        android:id="@+id/sell_title"
+        android:id="@+id/sell_label"
         style="@style/CommonLabelStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -72,7 +72,7 @@
         android:layout_alignTop="@id/sell_currency_image"
         android:layout_alignBottom="@id/sell_currency_image"
         android:layout_toStartOf="@+id/sell_dropdown"
-        android:layout_toEndOf="@+id/sell_title"
+        android:layout_toEndOf="@+id/sell_label"
         android:background="@android:color/transparent"
         android:hint="@string/sell_input_hint"
         tools:ignore="Autofill" />
@@ -90,7 +90,7 @@
         android:layout_width="wrap_content"
         android:layout_height="1dp"
         android:layout_below="@+id/sell_currency_image"
-        android:layout_alignStart="@id/sell_title"
+        android:layout_alignStart="@id/sell_label"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="18dp"
@@ -106,11 +106,11 @@
         android:src="@drawable/ic_buy_currency" />
 
     <TextView
-        android:id="@+id/buy_title"
+        android:id="@+id/buy_label"
         style="@style/CommonLabelStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@id/sell_title"
+        android:layout_alignStart="@id/sell_label"
         android:layout_alignTop="@id/buy_currency_image"
         android:layout_alignBottom="@id/buy_currency_image"
         android:text="@string/buy_title" />
@@ -123,7 +123,7 @@
         android:layout_alignTop="@id/buy_currency_image"
         android:layout_alignBottom="@id/buy_currency_image"
         android:layout_toStartOf="@+id/buy_dropdown"
-        android:layout_toEndOf="@+id/buy_title"
+        android:layout_toEndOf="@+id/buy_label"
         android:hint="@string/buy_input_hint"
         tools:ignore="Autofill" />
 
