--- a/app/src/main/res/values-v26/styles.xml
+++ b/app/src/main/res/values-v26/styles.xml
@@ -6,5 +6,7 @@
         <item name="android:gravity">center_vertical|end</item>
         <item name="android:importantForAutofill">no</item>
         <item name="android:inputType">numberDecimal</item>
+        <item name="android:textStyle">bold</item>
     </style>
+
 </resources>
