--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -75,6 +75,7 @@
         android:layout_toEndOf="@+id/sell_label"
         android:background="@android:color/transparent"
         android:hint="@string/sell_input_hint"
+        android:imeOptions="actionDone"
         tools:ignore="Autofill" />
 
     <Spinner
