--- a/app/src/main/res/values-v26/styles.xml
+++ b/app/src/main/res/values-v26/styles.xml
@@ -2,6 +2,8 @@
 <resources>
 
     <style name="MoneyInputStyle">
+        <item name="android:maxLines">1</item>
+        <item name="android:singleLine">true</item>
         <item name="android:background">@android:color/transparent</item>
         <item name="android:gravity">center_vertical|end</item>
         <item name="android:importantForAutofill">no</item>
